--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <title>Card Generator</title>
+    <title>React App</title>
+    <style>
+      * {
+        margin: 0px;
+        padding: 0px;
+        box-sizing: border-box;
+      }
+    </style>
   </head>
-  <body>
+  <body bgcolor="#d8f3dc">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
   </body>
